--- a/src/app/component/movie/list-movies-admin/list-movies-admin.component.html
+++ b/src/app/component/movie/list-movies-admin/list-movies-admin.component.html
@@ -60,8 +60,17 @@
 
 
 <div class="container align-items-center">
-    <div class="prs_heading_section_wrapper" style="margin-bottom: 40px">
-        <h2  style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">Danh Sách Phim</h2>
+    <div>
+    </div>
+    <div class="prs_animate_btn1">
+        <ul>
+            <li>
+                <a href="#" class="button button--tamaya" data-text="Thêm mới phim"><span style="color: black">Thêm mới phim</span></a>
+            </li>
+        </ul>
+    </div>
+    <div class="prs_heading_section_wrapper" style="margin-bottom: 40px; margin-top: -100px">
+        <h2 style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">Danh Sách Phim</h2>
     </div>
     <table class="table table-striped table-bordered table-responsive text-center">
         <thead class="thead-dark">
