--- a/src/app/component/movie/delete-movie/delete-movie.component.html
+++ b/src/app/component/movie/delete-movie/delete-movie.component.html
@@ -1,9 +1,13 @@
 
-<h2 mat-dialog-title>Xác nhận xóa</h2>
-<mat-dialog-content class="mat-typography">
-    <p>Bạn có chắc chắn xóa phim {{movie.name}} ?</p>
+<h1 mat-dialog-title>Xác nhận xóa</h1>
+<mat-dialog-content>
+    <h3>Bạn có chắc chắn xóa phim <b>{{movie.name}}</b> ?</h3>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close class="btn btn-primary">Đóng</button>
-    <button mat-button (click)="deleteConfirm()" class="btn btn-danger">Xóa</button>
-</mat-dialog-actions>
+<mat-grid-list cols="2" rowHeight="2:1">
+    <mat-grid-tile>
+        <button mat-raised-button-button mat-dialog-close class="btn btn-primary">Đóng</button>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <button mat-raised-button-button (click)="deleteConfirm()" class="btn btn-danger">Xóa</button>
+    </mat-grid-tile>
+</mat-grid-list>
