--- a/src/app/component/movie/list-movies-admin/list-movies-admin.component.html
+++ b/src/app/component/movie/list-movies-admin/list-movies-admin.component.html
@@ -1,5 +1,6 @@
 <div class="container align-items-center">
-    <div>
+    <div class="prs_heading_section_wrapper" style="margin-bottom: 40px; margin-top: -100px">
+        <h2>Danh Sách Phim</h2>
     </div>
     <div class="prs_animate_btn1">
         <ul>
@@ -7,9 +8,6 @@
                 <a href="#" class="button button--tamaya" data-text="Thêm mới phim"><span style="color: black">Thêm mới phim</span></a>
             </li>
         </ul>
-    </div>
-    <div class="prs_heading_section_wrapper" style="margin-bottom: 40px; margin-top: -100px">
-        <h2 style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">Danh Sách Phim</h2>
     </div>
     <table class="table table-hover table-striped table-bordered table-responsive text-center">
         <thead class="thead-dark">
@@ -23,20 +21,20 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngIf="movieList == null">
-            <td colspan="7">Hiện không có phim nào!</td>
-        </tr>
-        <tr *ngFor="let movie of movieList">
+        <tr *ngFor="let movie of movieList | paginate:{itemsPerPage:5,currentPage:p}">
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;"> {{movie.name}}</td>
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">{{movie.openingDay}}</td>
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">{{convertDirector(movie.directorList)}}</td>
-            <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">{{movie.duration}}</td>
+            <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;">{{movie.duration}} phút</td>
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;" *ngIf="movie.type === '_2D'">2D</td>
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;" *ngIf="movie.type === '_3D'">3D</td>
             <td style="box-sizing: border-box; font-family: 'Poppins', sans-serif;" *ngIf="movie.type === '_4D'">4D</td>
-            <td><a href="#"><i class="fa fa-edit"></i></a></td>
-            <td><a (click)="openDialogDelete(movie)" class="deleteButton"><i class="fa fa-trash"></i></a></td>
+            <td><a href="#"><i style="color: blue" class="fa fa-edit"></i></a></td>
+            <td><a (click)="openDialogDelete(movie)" class="deleteButton"><i style="color: red" class="fa fa-trash"></i></a>
+            </td>
         </tr>
         </tbody>
     </table>
+    <pagination-controls class="text-right" *ngIf="checkPagination" [directionLinks]=true [autoHide]=true [responsive]=true (pageChange)="p=$event" previousLabel="Trước" nextLabel="Sau"></pagination-controls>
+
 </div>
