--- a/src/app/component/show-time/selected-seat/selected-seat.component.html
+++ b/src/app/component/show-time/selected-seat/selected-seat.component.html
@@ -2,30 +2,17 @@
     <div class="container container_seat">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="st_bt_top_back_btn st_bt_top_back_btn_seatl float_left"><a href="BookingFilm.html"><i
+                <div class="st_bt_top_back_btn st_bt_top_back_btn_seatl float_left"><a routerLink='/selectedMovie/Movie1'><i
                         class="fas fa-long-arrow-alt-left"></i> &nbsp;Trở về</a>
-                </div>
-                <div class="cc_ps_quantily_info cc_ps_quantily_info_tecket">
-                    <p>Chọn vé</p>
-                    <div class="select_number">
-                        <button onclick="changeQty(1); return false;" class="increase"><i class="fa fa-plus"></i>
-                        </button>
-                        <input type="text" name="quantity" value="1" size="2" id="input-quantity" class="form-control"/>
-                        <button onclick="changeQty(0); return false;" class="decrease"><i class="fa fa-minus"></i>
-                        </button>
-                    </div>
-                    <input type="hidden" name="product_id"/>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <div class="st_bt_top_center_heading st_bt_top_center_heading_seat_book_page float_left">
                     <h3>{{movieShow.movie.name}} - {{ movieShow.movie.duration}}</h3>
-                    <h4>{{movieShow.dateStart }} - {{movieShow.timeSelected}} </h4>
+                    <h4>{{movieShow.dateStart |date:"shortDate" }} - {{movieShow.timeSelected}} </h4>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="st_bt_top_close_btn st_bt_top_close_btn2 float_left"><a href="#"><i class="fa fa-times"></i></a>
-                </div>
                 <div class="st_seatlay_btn float_left"><a  (click)="takeInformationSeat()">Tiếp tục </a>
                 </div>
             </div>
