--- a/src/app/component/show-time/selected-seat/selected-seat.component.html
+++ b/src/app/component/show-time/selected-seat/selected-seat.component.html
@@ -1,8 +1,8 @@
-<div class="st_bt_top_header_wrapper float_left">
+<div class="st_bt_top_header_wrapper float_left" *ngIf="!isDisplay">
     <div class="container container_seat">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="st_bt_top_back_btn st_bt_top_back_btn_seatl float_left"><a routerLink='/selectedMovie/Movie1'><i
+                <div class="st_bt_top_back_btn st_bt_top_back_btn_seatl float_left"><a (click)="displayShowTime()"><i
                         class="fas fa-long-arrow-alt-left"></i> &nbsp;Trở về</a>
                 </div>
             </div>
@@ -21,7 +21,7 @@
 </div>
 <!-- st top header Start -->
 <!-- st seat Layout Start -->
-<div class="st_seatlayout_main_wrapper float_left">
+<div class="st_seatlayout_main_wrapper float_left"*ngIf="!isDisplay">
     <div class="container container_seat">
         <div class="st_seat_lay_heading float_left">
             <h3>Rạp CGV</h3>
@@ -61,3 +61,5 @@
         </div>
     </div>
 </div>
+
+<app-selected-movie-show-time *ngIf="isDisplay"></app-selected-movie-show-time>
