--- a/src/app/component/movie/list-movie/list-movie.component.html
+++ b/src/app/component/movie/list-movie/list-movie.component.html
@@ -123,7 +123,7 @@
                                                 <div class="prs_upcom_movie_img_overlay"></div>
                                                 <div class="prs_upcom_movie_img_btn_wrapper">
                                                     <ul>
-                                                        <li><a href="#">Chi tiết</a>
+                                                        <li><a routerLink="/selectedMovie/{{movie.id}}">Chi tiết</a>
                                                         </li>
                                                         <li><a href="#">Đặt vé</a>
                                                         </li>
