--- a/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
+++ b/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
@@ -34,7 +34,7 @@
                                                 <div class="st_calen_asc_heart"><a href="#"> <i class="fa fa-heart"></i></a>
                                                 </div>
                                                 <div class="st_calen_asc_heart_cont">
-                                                    <h3>{{listMovies[0].movie?.name}}</h3>
+                                                    <h3>{{listMovies[0]?.movie?.name}}</h3>
                                                 </div>
                                                 <div class="st_calen_asc_tecket_time_select">
                                                     <ul>
