--- a/src/app/component/movie/movie-detail/movie-detail.component.html
+++ b/src/app/component/movie/movie-detail/movie-detail.component.html
@@ -37,10 +37,11 @@
                 <div class="prs_ms_trailer_vid_wrapper">
                     <div class="prs_ms_trailer_vid_icon_wrapper">
                         <ul>
-                            <li><a  rel='external'
-                                    href='https://www.youtube.com/watch?v=T1cugr4N-dY' title='title'><i
-                                    class="flaticon-play-button"></i></a>
-                            </li>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/T1cugr4N-dY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--                            <li><a  rel='external'-->
+<!--                                    href='https://www.youtube.com/watch?v=T1cugr4N-dY' title='title'><i-->
+<!--                                    class="flaticon-play-button"></i></a>-->
+<!--                            </li>-->
                         </ul>
                         <h2>Xem đoạn giới thiệu</h2>
                     </div>
