--- a/src/app/component/booking/create-booking/create-booking.component.html
+++ b/src/app/component/booking/create-booking/create-booking.component.html
@@ -1,4 +1,4 @@
-<div class="st_bt_top_header_wrapper float_left">
+<div class="st_bt_top_header_wrapper float_left" *ngIf="!isDisplay1">
     <div class="container">
         <div class="row">
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
@@ -14,8 +14,7 @@
         </div>
     </div>
 </div>
-<div class="st_dtts_wrapper float_left">
-
+<div class="st_dtts_wrapper float_left" *ngIf="!isDisplay1">
     <div class="container">
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-12">
@@ -75,7 +74,7 @@
                             <div class="st_cherity_btn float_left"><br>
                                 <ul>
                                     <li>
-                                        <a href="#"><i class="flaticon-tickets"></i> Hủy đặt</a>
+                                        <a href="/"><i class="flaticon-tickets"></i> Hủy đặt</a>
                                     </li>
                                     <li><a *ngIf="test" (click)="create()">
                                         <i class="flaticon-tickets"></i> &nbsp;Xác nhận đặt vé</a>
@@ -105,7 +104,6 @@
                                 </ul>
                             </div>
                             <div class="st_dtts_sb_h2 float_left">
-                                <h3>Tổng thu <span>{{totalmoney}}đ</span></h3>
                                 <h4>Trạng thái hiện tại <span>Chưa thanh toán</span></h4>
                                 <h5>Số tiền phải trả<span>{{totalmoney}}đ</span></h5>
                             </div>
@@ -116,3 +114,5 @@
         </div>
     </div>
 </div>
+
+<app-paypal *ngIf="isDisplay1" [price]="totalmoney"></app-paypal>
