--- a/src/app/component/booking/list-booking/list-booking.component.html
+++ b/src/app/component/booking/list-booking/list-booking.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="bookingList.length==0" class="container text-center alert-danger" style="margin-top: 25%">Hiện không có dữ
-    liệu nào phù hợp!
+<div *ngIf="bookingList.length==0" class="container text-center alert-danger" style="margin-top: 25%">
 </div>
 <div *ngIf="bookingList.length!=0" class="container" style="margin-top: 10%">
     <h1 class="text-center font-weight-bold">DANH SÁCH ĐẶT VÉ</h1>
@@ -21,16 +20,16 @@
             </div>
         </div>
         <table class="table table-striped jambo_table bulk_action" *ngIf="bookingList != null">
-            <thead>
+            <thead class="thead-dark">
             <tr class="headings">
-                <th scope="column-title">Mã đặt vé</th>
-                <th scope="column-title">Mã thành viên</th>
-                <th scope="column-title">Họ tên</th>
-                <th scope="column-title">CMND</th>
-                <th scope="column-title">Số điện thoại</th>
-                <th scope="column-title">Phim</th>
-                <th scope="column-title">Xuất chiếu</th>
-                <th scope="column-title"></th>
+                <th class="text-center" scope="column-title">Mã đặt vé</th>
+                <th class="text-center" scope="column-title">Mã thành viên</th>
+                <th class="text-center" scope="column-title">Họ tên</th>
+                <th class="text-center" scope="column-title">CMND</th>
+                <th class="text-center" scope="column-title">Số điện thoại</th>
+                <th class="text-center" scope="column-title">Phim</th>
+                <th class="text-center" scope="column-title">Xuất chiếu</th>
+                <th class="text-center" scope="column-title"></th>
             </tr>
             </thead>
             <tbody>
