--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -185,7 +185,7 @@ table {
 }
 td,
 th {
-  padding: 0;
+  padding: 5px;
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
@@ -1142,6 +1142,7 @@ img {
 }
 .img-circle {
   border-radius: 50%;
+    object-fit: cover;
 }
 hr {
   margin-top: 20px;
