--- a/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
+++ b/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 </div>
-<p style="align-content: center">Phim : {{listMovies[0].movie.name}}</p>
+<p style="align-content: center">Phim : {{listMovies[0].movie?.name}}</p>
 
 <div class="st_slider_index_sidebar_main_wrapper st_slider_index_sidebar_main_wrapper_booking float_left" *ngIf="!isDisplay">
     <div class="container">
