update dev-nhuptq 1303

--- a/src/app/component/show-time/selected-seat/selected-seat.component.html
+++ b/src/app/component/show-time/selected-seat/selected-seat.component.html
@@ -62,4 +62,4 @@
     </div>
 </div>
 
-<app-selected-movie-show-time *ngIf="isDisplay"></app-selected-movie-show-time>
+<app-create-booking *ngIf="isDisplay" [seatMovieDTO]="movieSeatDTO"></app-create-booking>
