--- a/src/app/component/show-time/selected-seat/selected-seat.component.html
+++ b/src/app/component/show-time/selected-seat/selected-seat.component.html
@@ -2,7 +2,7 @@
     <div class="container container_seat">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="st_bt_top_back_btn st_bt_top_back_btn_seatl float_left"><a (click)="displayShowTime()"><i
+                <div class="st_bt_top_back_btn st_bt_top_back_btn_seatl float_left"><a (click)="displayShowTime()"  style="cursor: pointer" ><i
                         class="fas fa-long-arrow-alt-left"></i> &nbsp;Trở về</a>
                 </div>
             </div>
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <div class="st_seatlay_btn float_left"><a  (click)="takeInformationSeat()">Tiếp tục </a>
+                <div class="st_seatlay_btn float_left"><a  (click)="takeInformationSeat()"  style="cursor: pointer" >Tiếp tục </a>
                 </div>
             </div>
         </div>
