fix css error fished yead yead luck

--- a/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
+++ b/src/app/component/show-time/selected-movie-show-time/selected-movie-show-time.component.html
@@ -51,7 +51,7 @@
 															<h4>{{movieTime.price}} VND</h4>
 															</span>
                                                                         <a (click)="takeTime(movieTime.startTime)"
-                                                                           id="{{movieTime.id}}">{{movieTime.startTime}}</a>
+                                                                           id="{{movieTime.id}}" style="cursor: pointer">{{movieTime.startTime}}</a>
                                                                     </li>
 
                                                                 </ul>
