--- a/src/app/component/movie/edit-movie/edit-movie.component.html
+++ b/src/app/component/movie/edit-movie/edit-movie.component.html
@@ -1,30 +1,43 @@
 <div class="container">
     <form class="form-group" [formGroup]="formEditMovie" (ngSubmit)="editMovie()">
-        <h2>Thêm mới phim</h2>
-        <div class="form-group">
-            <div class="col-sm-12 row">
-                <div class="col-sm-6">
-                </div>
+        <h2>Chỉnh sửa phim</h2>
+<!--        <div class="form-group">-->
+<!--            <div class="col-sm-12 row">-->
+<!--                <div class="col-sm-6">-->
+<!--                </div>-->
 
-                <div class="col-sm-6">
-                    <div><img *ngIf="url" [src]="url" class="img-thumbnail" style="width: 200px"></div>
-                    <input type="file" id="img" name="img" (change)="selectFile($event)" formControlName="poster">
-                </div>
-            </div>
-        </div>
+<!--                <div class="col-sm-6">-->
+<!--                    <div><img *ngIf="url" [src]="url" class="img-thumbnail" style="width: 200px"></div>-->
+<!--                    <input type="file" id="img" name="img" (change)="selectFile($event)" formControlName="poster">-->
+<!--                    <label class="form-text text-danger"-->
+<!--                           *ngIf="formEditMovie.get('poster')?.hasError('required')  && formEditMovie.get('poster')?.touched">-->
+<!--                        Chưa chọn ảnh.-->
+<!--                    </label>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="form-group">
             <div class="col-sm-12 row">
                 <label class="col-2 col-form-label">Tên phim</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" formControlName="name">
+                    <label class="form-text text-danger"
+                           *ngIf="formEditMovie.get('name')?.hasError('required')  && formEditMovie.get('name')?.touched">
+                        Chưa nhập tên phim.
+                    </label>
                 </div>
+
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-12 row">
                 <label class="col-2 col-form-label">Từ ngày</label>
                 <div class="col-sm-8">
-                    <input type="datetime-local" class="form-control" formControlName="openingDay">
+                    <input type="date" class="form-control" formControlName="openingDay">
+                    <label class="form-text text-danger"
+                           *ngIf="formEditMovie.get('openingDay')?.hasError('required')  && formEditMovie.get('openingDay')?.touched">
+                        Chưa nhập ngày.
+                    </label>
                 </div>
             </div>
         </div>
@@ -32,7 +45,11 @@
             <div class="col-sm-12 row">
                 <label class=" col-2 col-form-label">Đến ngày</label>
                 <div class="col-sm-8">
-                    <input type="datetime-local" class="form-control" formControlName="endDay">
+                    <input type="date" class="form-control" formControlName="endDay">
+                    <label class="form-text text-danger"
+                           *ngIf="formEditMovie.get('endDay')?.hasError('required')  && formEditMovie.get('endDay')?.touched">
+                        Chưa nhập ngày.
+                    </label>
                 </div>
             </div>
         </div>
@@ -40,37 +57,48 @@
             <div class="col-sm-12 row">
                 <label class="col-2 col-form-label">Diễn viên</label>
                 <div class="col-sm-8">
-                    <mat-select class="custom-select">
-                        <mat-option *ngFor="let actor of actorList"><input type="checkbox" formArrayName="actorList"
-                                                                           (change)="onCheckboxChangeActor($event,actor)"/>
-                            <label class="form-check-label">{{actor.name}}</label></mat-option>
+                    <mat-select id="actorList" class="custom-select" multiple>
+                        <mat-option *ngFor="let actor of actorList"
+                                    formArrayName="actorList"
+                                    (onSelectionChange)="onCheckboxChangeActor($event,actor)">
+                            <label class="form-check-label">{{actor.name}}</label>
+                        </mat-option>
                     </mat-select>
+                    <label id="fnHelp" *ngIf="actorListError" class="form-text text-danger">Chưa
+                        chọn diễn
+                        viên</label>
                 </div>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-12 row">
-                <label class=" col-2 col-form-label">Hãng phim</label>
-                <div class="col-sm-8">
-                    <mat-select class="custom-select">
-                        <mat-option *ngFor="let producer of producerList"><input type="checkbox"
-                                                                                 formArrayName="producerList"
-                                                                                 (change)="onCheckboxChangeProducer($event,producer)"/>
-                            <label class="form-check-label">{{producer.name}}</label></mat-option>
-                    </mat-select>
-                </div>
+        <div class="col-sm-12 row">
+            <label class=" col-2 col-form-label">Hãng phim</label>
+            <div class="col-sm-8">
+                <mat-select class="custom-select" multiple>
+                    <mat-option *ngFor="let producer of producerList"
+                                formArrayName="producerList"
+                                (onSelectionChange)="onCheckboxChangeProducer($event,producer)">
+                        <label class="form-check-label">{{producer.name}}</label></mat-option>
+                </mat-select>
+                <label *ngIf="producerListError" class="form-text text-danger">Chưa
+                    chọn hãng phim
+                </label>
             </div>
         </div>
+    </div>
         <div class="form-group">
             <div class="col-sm-12 row">
                 <label class="col-2 col-form-label">Đạo diễn</label>
                 <div class="col-sm-8">
-                    <mat-select class="custom-select">
-                        <mat-option *ngFor="let director of directorList"><input type="checkbox"
-                                                                                 formArrayName="directorList"
-                                                                                 (change)="onCheckboxChangeDirector($event,director)"/>
+                    <mat-select class="custom-select" multiple>
+                        <mat-option *ngFor="let director of directorList"
+                                    formArrayName="directorList"
+                                    (onSelectionChange)="onCheckboxChangeDirector($event,director)">
                             <label class="form-check-label">{{director.name}}</label></mat-option>
                     </mat-select>
+                    <label *ngIf="directorListError" class="form-text text-danger">Chưa
+                        chọn đạo diễn
+                    </label>
                 </div>
             </div>
         </div>
@@ -79,6 +107,10 @@
                 <label class="col-2 col-form-label">Thời lượng</label>
                 <div class="col-sm-8">
                     <input type="number" class="form-control" formControlName="duration">
+                    <label class="form-text text-danger"
+                           *ngIf="formEditMovie.get('duration')?.hasError('required')  && formEditMovie.get('duration')?.touched">
+                        Chưa nhập thời lượng phim.
+                    </label>
                 </div>
             </div>
         </div>
@@ -95,6 +127,10 @@
                            value="_3D" formControlName="type">
                     <label class="form-check-label">3D</label>
                 </div>
+                <label class="form-text text-danger"
+                       *ngIf="formEditMovie.get('type')?.hasError('required')  && formEditMovie.get('type')?.touched">
+                    Chưa chọn phiên bản.
+                </label>
             </div>
         </div>
         <div class="form-group">
@@ -102,67 +138,74 @@
                 <label class="col-2 col-form-label">Trailer</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" formControlName="trailer">
+                    <label class="form-text text-danger"
+                           *ngIf="formEditMovie.get('trailer')?.hasError('required')  && formEditMovie.get('trailer')?.touched">
+                        Chưa nhập trailer phim.
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+        <div class="col-sm-12 row">
+            <label class="col-2 col-form-label">Thể loại</label>
+            <div *ngFor="let genre of genreList" formArrayName="genreList">
+                    <mat-checkbox (change)="onCheckboxChangeGenre($event,genre)">
+                        <label class="form-check-label">{{genre.name}}</label>
+                    </mat-checkbox>
+                    <label *ngIf="genreListError" class="form-text text-danger">Chưa
+                        chọn thể loại
+                    </label>
+            </div>
+        </div>
+    </div>
+        <div class="form-group">
+            <div class="col-sm-12 row">
+                <label class="col-2 col-form-label">Phòng chiếu</label>
+                <div class="col-sm-8">
+                    <mat-select class="custom-select" formControlName="theaterList">
+                        <mat-option *ngFor="let theater of theaterDTOList"
+                                    [value]="theater">{{theater.name}}</mat-option>
+                    </mat-select>
+                    <label class="form-text text-danger"
+                           *ngIf="formEditMovie.get('theaterList')?.hasError('required')  && formEditMovie.get('theaterList')?.touched">
+                        Chưa chọn phòng chiếu phim.
+                    </label>
                 </div>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-12 row">
-                <label class="col-2 col-form-label">Thể loại</label>
-
-                <div *ngFor="let genre of genreList">
-                    <div class="col-4">
-                        <input type="checkbox" formArrayName="genreList"
-                               (change)="onCheckboxChangeGenre($event,genre)"/>
-                        <label class="form-check-label">{{genre.name}}</label>
-                    </div>
+                <label class="col-2 col-form-label">Lịch chiếu</label>
+                <div class="col-sm-8">
+                    <mat-select class="custom-select" multiple>
+                        <mat-option *ngFor="let time of showTimeDTOList"
+                                    formArrayName="showTimeList"
+                                    (onSelectionChange)="onCheckboxChangeTime($event,time)">
+                            <label class="form-check-label">{{time.startTime}}</label></mat-option>
+                    </mat-select>
+                    <label *ngIf="showTimeListError" class="form-text text-danger">Chưa
+                        chọn lịch chiếu
+                    </label>
                 </div>
             </div>
         </div>
-
-<!--        <div class="form-group">-->
-<!--            <div class="col-sm-12 row">-->
-<!--                <label class="col-2 col-form-label">Phòng chiếu</label>-->
-<!--                <div class="col-sm-8">-->
-<!--                    <mat-select class="custom-select" formControlName="theaterList">-->
-<!--                        <mat-option *ngFor="let theater of theaterDTOList"-->
-<!--                                    [value]="theater">{{theater.name}}</mat-option>-->
-<!--                    </mat-select>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-        <!--                        <div class="form-group">-->
-        <!--                            <div class="col-sm-12 row" formArrayName="startTime">-->
-        <!--                                <label class="col-2 col-form-label">Lịch chiếu</label>-->
-        <!--                                <div class="col-sm-2">-->
-        <!--                                    <input type="text" class="form-control" #element>-->
-        <!--                                </div>-->
-        <!--                                <div class="col-sm-2" id="showtime">-->
-        <!--                                    <button class="btn btn-primary" (click)="addTime(element)">Thêm giờ chiếu</button>-->
-        <!--                                </div>-->
-
-        <!--                            </div>-->
-        <!--                            <p> {{startTimeList}}</p>-->
-        <!--                        </div>-->
-        <!--                        <div class="form-group">-->
-        <!--                            <div class="col-sm-12 row" formArrayName="startTime">-->
-        <!--                                <label class="col-2 col-form-label" id="hidden"></label>-->
-        <!--                                <div class="col-sm-8">-->
-        <!--                                    <input class="form-control" formControlName="showTimeList">-->
-        <!--                                </div>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
         <div class="form-group">
             <div class="col-sm-12 row">
                 <label class="col-2 col-form-label">Nội dung</label>
                 <div class="col-sm-8">
                     <textarea type="text" class="form-control" formControlName="content"></textarea>
+                    <label class="form-text text-danger"
+                           *ngIf="formEditMovie.get('content')?.hasError('required')  && formEditMovie.get('content')?.touched">
+                        Chưa nhập nội dung phim.
+                    </label>
                 </div>
             </div>
         </div>
-        <div align="center">
-            <button routerLink="/movie" type="button" class="btn btn-secondary">Quay lại</button>
-            <button type="submit" class="btn btn-primary">Chỉnh sửa</button>
-        </div>
+            <div align="center">
+                <button routerLink="/movie" type="button" class="btn btn-secondary">Quay lại</button>
+                <button type="submit" class="btn btn-primary">Chỉnh sửa</button>
+            </div>
+
     </form>
 
 </div>
