update-dev2-NHUPTQ

--- a/src/app/component/movie/list-movie/list-movie.component.html
+++ b/src/app/component/movie/list-movie/list-movie.component.html
@@ -115,7 +115,7 @@
                                                 <div class="prs_upcom_movie_img_overlay"></div>
                                                 <div class="prs_upcom_movie_img_btn_wrapper">
                                                     <ul>
-                                                        <li><a routerLink="/selectedShowTime/{{movie.id}}">Chi tiết</a>
+                                                        <li><a routerLink="/detail-movie/{{movie.id}}">Chi tiết</a>
                                                         </li>
                                                         <li><a href="#">Đặt vé</a>
                                                         </li>
