--- a/src/app/component/movie/movie-detail/movie-detail.component.html
+++ b/src/app/component/movie/movie-detail/movie-detail.component.html
@@ -52,7 +52,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="prs_syn_cont_wrapper">
                         <h3>Tóm tắt</h3>
-                        <p>{{movie.introduction}}</p>
+                        <p>{{movie.content}}</p>
                     </div>
                 </div>
             </div>
