--- a/src/app/component/user/list-employee/list-employee.component.html
+++ b/src/app/component/user/list-employee/list-employee.component.html
@@ -2,20 +2,12 @@
 
 <div class="x_content">
     <div id="datatable_wrapper" class="dataTables_wrapper form-inline dt-bootstrap no-footer">
-        <div class="row">
-            <div class="col-sm-6">
-                <div id="datatable_filter" class="dataTables_filter"><label>&emsp;Tìm kiếm:&ensp;<input type="search"
-                                                                                                        class="form-control input-sm"
-                                                                                                        placeholder=""
-                                                                                                        aria-controls="datatable"></label>
-                </div>
-            </div>
-        </div>
+
         <div class="row">
             <div class="col-sm-12">
                 <table id="datatable" class="table table-striped table-bordered dataTable no-footer" role="grid"
                        aria-describedby="datatable_info">
-                    <thead>
+                    <thead class="thead-dark">
                     <tr role="row">
                         <th class="sorting_asc" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1"
                             aria-sort="ascending" aria-label="Name: activate to sort column descending"
@@ -47,7 +39,7 @@
                     <tbody>
 
 
-                    <tr role="row" class="odd" *ngFor="let employee of employeeList">
+                    <tr role="row" class="odd" *ngFor="let employee of employeeList |  paginate:{itemsPerPage: 4, currentPage: curPage}">
                         <td class="sorting_1">{{employee.id}}</td>
                         <td>{{employee.fullName}}</td>
                         <td>{{employee.idCard}}</td>
@@ -55,14 +47,24 @@
                         <td>{{employee.phoneNumber}}</td>
                         <td>{{employee.address}}</td>
                         <td class="edit-user">
-                            <a [routerLink]="'/update/' + employee.id">&emsp;Sửa&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a [routerLink]="'delete/' + employee.id">&emsp;Xóa</a>
+                            <a [routerLink]="'/update/' + employee.id" class="btn btn-warning" style="color: white">Sửa</a>
+                            <a [routerLink]="'delete/' + employee.id" class="btn btn-danger" style="margin-left: 7px; color: white">Xóa</a>
                         </td>
 
                     </tr>
 
                     </tbody>
                 </table>
+                <pagination-controls (pageChange)="curPage = $event"
+                                     [directionLinks]=true
+                                     [autoHide]=true
+                                     [responsive]=true
+                                     previousLabel="Previous"
+                                     nextLabel="Next"
+                                     screenReaderPaginationLabel="Pagination"
+                                     screenReaderPageLabel="page"
+                                     screenReaderCurrentLabel="You're on page">
+                </pagination-controls>
             </div>
         </div>
     </div>
